Création de l'activité "liste des references"

--- a/AgenceLivingRoom/res/values/strings.xml
+++ b/AgenceLivingRoom/res/values/strings.xml
@@ -18,5 +18,12 @@
 	<string name="siteWeb">Site Web</string>
 	<string name="infos">Infos</string>
 	<string name="parametres">Paramètres</string>
+	<string name="contactMailMessage">Envoyez-nous votre message, nous vous répondrons par email.</string>
+	<string name="aProposAdresse">Bureaux de l\'agence: 8 rue Ingres - 31 000 Toulouse</string>
+	<string name="aProposMail">Mail: contact@agence-livingroom.com</string>
+	<string name="aProposTelephone">Téléphone: 06.38.54.09.23 - Fax: 09.72.43.83.72</string>
+	<string name="aProposSociete">Agence LivingRoom est une marque de la société USUFREE SARL au capital de 2 000 euros,
+	    Le siège social est à AUREVILLE (31320) – Le bois grand, immatriculée au Registre du Commerce et des Sociétés de TOULOUSE
+	    Identifiée sous le numéro SIREN 493 889 315, titulaire de la carte G0675 délivrée par la Préfecture de Haute Garonne</string>
 	
 </resources>
