Ajout de l'écran de recherche et affichage des résultats

--- a/AgenceLivingRoom/res/values/strings.xml
+++ b/AgenceLivingRoom/res/values/strings.xml
@@ -6,8 +6,10 @@
     <string name="action_settings">Paramètres</string>
     <string name="logo_desc">Logo de l\'application</string>
     <string name="description">Application mobile de l\'agence immobilière Living Room</string>
+    <string name="buttonRechercherDesc">Image pour le bouton Rechercher</string>
     <string name="notificationsPush">Notifications push</string>
     <string name="boutonValider">Valider</string>
+    <string name="boutonRechercher">Rechercher</string>
 	<string name="boutonModifier">Modifier</string>
 	<string name="boutonAnnuler">Annuler</string>
 	<string name="trouverUnBien">Trouver un bien</string>
@@ -18,6 +20,18 @@
 	<string name="siteWeb">Site Web</string>
 	<string name="infos">Infos</string>
 	<string name="parametres">Paramètres</string>
+	
+	<string name="choixVille">Ville</string>
+	<string name="promptVille">Choisir la ville</string>
+	<string name="choixQuartier">Quartier</string>
+	<string name="promptQuartier">Choisir le quartier</string>
+	<string name="choixType">Type</string>
+	<string name="promptType">Choisir le type</string>
+	<string name="choixLouer">A louer</string>
+	<string name="choixVendre">A vendre</string>
+	<string name="choixLoyer">Loyer CC</string>
+	<string name="promptLoyer">Choisir le loyer CC</string>
+	
 	<string name="contactMailMessage">Envoyez-nous votre message, nous vous répondrons par email.</string>
 	<string name="aProposAdresse">Bureaux de l\'agence: 8 rue Ingres - 31 000 Toulouse</string>
 	<string name="aProposMail">Mail: contact@agence-livingroom.com</string>
